// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar should match snapshot when MAIN_VIEW_GRAPH 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "toggleFromArrayInKey": [Function],
      "toggleFromSubArray": [Function],
    }
  }
  availableEdgesCount={333}
  availableNodesCount={200}
  entrySearchResults={
    Array [
      Object {
        "id": "123",
      },
    ]
  }
  mainVisualisation="graph"
  mapToProps={[Function]}
>
  <Component />
</Connect>
`;

exports[`Navbar should match snapshot when MAIN_VIEW_SEARCH 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "toggleFromArrayInKey": [Function],
      "toggleFromSubArray": [Function],
    }
  }
  availableEdgesCount={333}
  availableNodesCount={200}
  entrySearchResults={
    Array [
      Object {
        "id": "123",
      },
    ]
  }
  mainVisualisation="search"
  mapToProps={[Function]}
>
  <Component />
</Connect>
`;
